Bump to new JDK in order to remove preview feature flag